Updates for Jetty 10.0.9